minor edit on README

--- a/README
+++ b/README
@@ -25,4 +25,4 @@ Limitation:
  - pyhwp supports hwp 5.0 file version only
 
 Author:
-   yoosung <mete0r@sarangbang.or.kr>
+   mete0r <mete0r@sarangbang.or.kr>
