another minor edits on README@master

--- a/README
+++ b/README
@@ -12,4 +12,4 @@ Requirements:
  - OleFileIO_PL (>=2.0)
 
 Author:
-   mete0r <mete0r@sarangbang.or.kr>
+   mete0r <mete0r NOTHANKSSPAM sarangbang.or.kr>
