--- a/README
+++ b/README
@@ -8,8 +8,113 @@ Project Hosting:
   http://github.com/mete0r/pyhwp
 
 Requirements:
- - python 2.6 or above
+ - python 2.6.5 or above
  - OleFileIO_PL (>=2.0)
 
 Author:
    mete0r <mete0r NOTHANKSSPAM sarangbang.or.kr>
+
+Installation:
+
+   git clone git://github.com/mete0r/pyhwp.git
+   cd pyhwp
+   python bootstrap.py
+   bin/buildout
+
+Memo:
+
+현재 다음의 것이 가능합니다.
+
+1) 복합파일(Compound File)로부터 각 스트림을 압축된/압축해제된 형태로 읽어내기
+2) DocInfo, BodyText/SectionX 스트림들을 레코드 단위로 분리해서 읽어내기
+3) 읽어낸 레코드들을 Paragraph 등 실제 어트리뷰트를 갖는 데이터 모델로 파싱, XML로 출력하기
+
+각각의 단계에 대응하는 다음 실행파일이 존재합니다:
+
+   bin/hwpfile <hwp파일이름> [<스트림 파일>]
+   bin/hwp5rec <hwp파일이름> <레코드 스트림 파일> [<덤프할 레코드 범위>]
+   bin/hwp5bin <hwp파일이름> <레코드 스트림 파일>
+
+각 실행파일의 사용법은 다음과 같습니다:
+
+1.  bin/hwp5file : hwp5 복합파일(Compound File)에 포함되어 있는 스트림 파일들의 목록을 확인하고, 각각을 덤프할 수 있습니다.
+
+사용법:
+	bin/hwp5file <hwp파일이름> [<스트림 파일>]
+
+<스트림 파일>을 생략할 경우 출력 가능한 스트림 파일의 목록을 출력합니다.
+
+<스트림 파일>에 스트림 파일의 상대 경로를 명시할 경우, (hwp 파일이 압축된 경우) 압축된 스트림이 그대로 출력됩니다.
+
+<스트림 파일>에 다음의 이름을 입력하면 해당 스트림의 압축이 해제되어 출력됩니다:
+
+	preview_text : 	PrvText를 압축 해제하여 출력
+	preview_image : PrvImage를 압축 해제하여 출력
+	docinfo : DocInfo를 압축 해제하여 출력
+	bodytext <index> : BodyText/Section<index>를 압축 해제하여 출력
+	bindata <filename> : BIN/<filename>을 압축해제하여 출력
+
+사용 예:
+
+	예1: 복합파일의 스트림 파일의 목록을 출력
+
+		bin/hwp5file sample.hwp
+
+	예2: hwp5파일의 preview text를 출력
+
+		bin/hwp5file sample.hwp preview_text
+
+	예3: hwp5파일의 DocInfo 스트림을 출력; 파일이 압축되어 있는 경우 압축된 그대로 출력
+
+		bin/hwp5file sample.hwp DocInfo
+
+	예4: hwp5파일의 DocInfo 스트림을 압축 해제하여 출력
+
+		bin/hwp5file sample.hwp docinfo > docinfo.bin
+
+	예5: hwp파일의 BodyText/Section0 스트림을 압축 해제하여 출력
+
+		bin/hwp5file sample.hwp bodytext 0 > bodytext0.bin
+
+	예6: hwp파일에 첨부된 BinData/BIN0001.JPG를 출력 (파일이 압축된 경우, 압축된 그대로 출력)
+
+		bin/hwp5file sample.hwp BinData/BIN0001.JPG
+
+	예7: hwp파일에 첨부된 BinData/BIN0001.JPG를 압축 해제하여 출력
+
+		bin/hwp5file sample.hwp bindata BIN0001.JPG > bin0001.jpg
+
+
+2. bin/hwp5rec : hwp5 파일의 DocInfo, BodyText/Section* 스트림 파일을 레코드 트리 형태로 덤프할 수 있습니다.
+
+사용법:
+	bin/hwp5rec <hwp파일이름> <레코드 스트림 파일> [<덤프할 레코드 범위>]
+
+사용 예:
+
+	예1: sample.hwp의 DocInfo 레코드 스트림을 출력합니다.
+
+		bin/hwp5rec sample.hwp docinfo
+
+	예2: sample.hwp의 BodyText/Section0 레코드 스트림을 출력합니다.
+
+		bin/hwp5rec sample.hwp bodytext/0
+
+	예3: sample.hwp의 BodyText/Section0에 포함된 레코드 26를 출력합니다.
+
+		bin/hwp5rec sample.hwp bodytext/0 26
+
+	예4: sample.hwp의 BodyText/Section0에 포함된 레코드 26~28을 출력합니다.
+
+		bin/hwp5rec sample.hwp bodytext/0 26:29
+
+3. bin/hwp5bin : hwp5 파일의 DocInfo, BodyText/Section* 파일을 Paragraph 등 실제 어트리뷰트를 갖는 데이터 모델로 파싱, XML 파일로 변환해서 출력합니다.
+
+(여기에 사용된 XML 형식은 한소프트가 지원하는 공식적인 HWPML이 아니며, 단지 분석의 편의를 위해 pyhwp에서 임의로 정의한 형식입니다. 단지 분석 하실 때 참고용으로만 사용하세요)
+
+사용법:
+	bin/hwp5bin <hwp파일이름> <레코드 스트림 파일>
+
+	예1:
+		bin/hwp5bin sample.hwp docinfo > docinfo.xml
+		bin/hwp5bin sample.hwp bodytext/0 > bodytext0.xml
