--- a/README
+++ b/README
@@ -1,4 +1,12 @@
 pyhwp
 =====
 
-hwp file format parser
+HWPv5 format processor.
+
+Features
+--------
+
+- Analyze and extract internal streams out from a HWPv5 file
+- Conversion to OpenDocument format (.odt) or plain text (.txt) (Experimental)
+
+Documentation is `here <http://pyhwp.readthedocs.org>`.
