README: fix requirements

--- a/README
+++ b/README
@@ -28,7 +28,8 @@ Requirements
 
 - Python 2.5, 2.6 or 2.7
 - simplejson
-- OleFileIO >= 0.20
+- OleFileIO_PL >= 0.20
+- docopt == 0.3
 
 Development & Documentation
 ---------------------------
