--- a/README
+++ b/README
@@ -29,7 +29,7 @@ Requirements
 - Python 2.5, 2.6 or 2.7
 - simplejson
 - OleFileIO_PL >= 0.20
-- docopt == 0.3
+- docopt >= 0.3
 
 Development & Documentation
 ---------------------------
