docs: ko translations

--- a/docs/translated/ko/LC_MESSAGES/intro.po
+++ b/docs/translated/ko/LC_MESSAGES/intro.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2012, mete0r
 # This file is distributed under the same license as the pyhwp package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# mete0r <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-10 07:59\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,42 +24,42 @@ msgstr ""
 #: ../../intro.rst:4
 # 75c5f1d6ce704cfb987f218ddac8e5c9
 msgid "HWP Document Format v5 parser & processor."
-msgstr ""
+msgstr "HWP 문서 포맷 버젼5 파서 & 처리기"
 
 #: ../../intro.rst:7
 # bdea2ae9aea14b619ceab66b9f6d685c
 msgid "Features"
-msgstr ""
+msgstr "기능"
 
 #: ../../intro.rst:9
 # 6b057a4ced754848bd138b559238556f
 msgid "Analyze and extract internal streams out from a HWP Document Format v5 file"
-msgstr ""
+msgstr "HWP 문서 버젼 5 파일의 내부 스트림을 분석/분리"
 
 #: ../../intro.rst:10
 # a68f3e9e704d45dda4278f0efaf64d8a
 msgid "(*Experimental*) Conversion to OpenDocument format (.odt) or plain text (.txt)"
-msgstr ""
+msgstr "(*실험적*) OpenDocument 포맷(.odt)나 일반 텍스트 문서로 변환"
 
 #: ../../intro.rst:13
 # ea5a3a8d49cc413eb9ef1fa6f58633ff
 msgid "Installation"
-msgstr ""
+msgstr "설치"
 
 #: ../../intro.rst:15
 # 0d7548139cea4b37bb2298584800bffc
 msgid "from `pypi <http://pypi.python.org/pypi/pyhwp>`_::"
-msgstr ""
+msgstr "`pypi <http://pypi.python.org/pypi/pyhwp>`_ 에서::"
 
 #: ../../intro.rst:19
 # ab2b026ca97f43ac8001e6dba8286ce8
 msgid "from `github <https://github.com/mete0r/pyhwp>`_::"
-msgstr ""
+msgstr "`github <https://github.com/mete0r/pyhwp>`_ 에서::"
 
 #: ../../intro.rst:27
 # da4c2f33f39048e9a72ad43807cd7e37
 msgid "Requirements"
-msgstr ""
+msgstr "필요한 것들"
 
 #: ../../intro.rst:29
 # f760bb102652464aa8ec21e593f486bb
@@ -89,12 +89,12 @@ msgstr ""
 #: ../../intro.rst:36
 # 070821d20ddc4c6cb15fa70632bf6523
 msgid "Documentation & Development"
-msgstr ""
+msgstr "문서화 및 개발"
 
 #: ../../intro.rst:38
 # d21d1a96770c48399bf7d7962f96c816
 msgid "Documentation: `http://pyhwp.readthedocs.org <http://pyhwp.readthedocs.org>`_"
-msgstr ""
+msgstr "문서화: `http://pyhwp.readthedocs.org <http://pyhwp.readthedocs.org>`_"
 
 #: ../../intro.rst:39
 # 85285a15a8574742b5e7e57d5ce9c7bb
@@ -109,27 +109,27 @@ msgstr ""
 #: ../../intro.rst:41
 # f0f93a1ed81747dc9c7a3c631b971e86
 msgid "Issue tracker: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_"
-msgstr ""
+msgstr "버그 추적: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_"
 
 #: ../../intro.rst:42
 # 317c633c180a4bda8045e2a5b1e757cf
 msgid "Feedbacks & contributions are welcome!"
-msgstr ""
+msgstr "피드백이나 기여 환영합니다."
 
 #: ../../intro.rst:45
 # b200736b60a04a8480b72cb24a513db0
 msgid "Contributors"
-msgstr ""
+msgstr "기여한 이들"
 
 #: ../../intro.rst:47
 # 38b9e22103b4432eaf4fdf9f452bc3e3
 msgid "Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_"
-msgstr ""
+msgstr "Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_"
 
 #: ../../intro.rst:50
 # 3968cb8206a14f398a248eed814ad9aa
 msgid "License"
-msgstr ""
+msgstr "사용허가"
 
 #: ../../intro.rst:54
 # 32ed7d69ae9f4bf5bff4e8d68c113f4c
@@ -139,7 +139,7 @@ msgstr ""
 #: ../../intro.rst:58
 # c3270c668ef7418e951ef0bc8ac17fdd
 msgid "Disclosure"
-msgstr ""
+msgstr "공개"
 
 #: ../../intro.rst:60
 # 42e655554a964a3183584bed58452f29
