--- a/docs/translated/ko/LC_MESSAGES/hwp5proc.po
+++ b/docs/translated/ko/LC_MESSAGES/hwp5proc.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 2012, mete0r
 # This file is distributed under the same license as the pyhwp package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# mete0r <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-10 08:43\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,22 +19,22 @@ msgstr ""
 #: ../../hwp5proc.rst:2
 # 8ae66890d3c34537b90c78f06ac868ef
 msgid "``hwp5proc``: HWPv5 processor"
-msgstr ""
+msgstr "``hwp5proc``: HWPv5 처리기"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:1
 # bed00d76e0724575a465d3780b90d7fd
 msgid "Do various operations on HWPv5 files."
-msgstr ""
+msgstr "HWPv5 파일들에 여러가지 작업을 수행한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:3
 # cf8a544eee554bbcb012724d966509dc
 msgid "Usage::"
-msgstr ""
+msgstr "사용법::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:19
 # 71d2980c664e45d397af9734a5494c43
 msgid "Options::"
-msgstr ""
+msgstr "옵션::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:41
 # 3d0680517061451580552a8980218e48
@@ -44,7 +44,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:42
 # cad75aaf5f6a42ae8910807b46c6a1ef
 msgid "Print HWP file format version of <hwp5file>."
-msgstr ""
+msgstr "<hwp5file>의 HWP 파일 포맷 버젼을 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:46
 # 4c8936ae2aab43778971aa79502a721e
@@ -54,7 +54,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:47
 # 63b15ef0ee354277b5963fba9147a8f9
 msgid "Print FileHeader of <hwp5file>."
-msgstr ""
+msgstr "<hwp5file>의 FileHeader를 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:51
 # dbe41a6cd1954ea3817730c5c0ee6bc4
@@ -64,7 +64,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:52
 # f8011d33ac684c2b8378e18b9e3abedc
 msgid "Print summary information of <hwp5file>."
-msgstr ""
+msgstr "<hwp5file>의 요약정보(summary information)을 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:56
 # 524fb6fab0b74460bc07f13a91758e1b
@@ -74,17 +74,17 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:57
 # b44ddef0cd314f458485388b49c636ca
 msgid "List streams in the <hwp5file>."
-msgstr ""
+msgstr "<hwp5file>의 스트림 목록을 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:59
 # 43a9eab8ec344cfdb4a33aa848da2a56
 msgid "Example: List without virtual streams::"
-msgstr ""
+msgstr "예: 가상 스트림을 제외한 목록을 출력한다::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:76
 # ecd90dc2d4094b3c8052a495648ff78f
 msgid "Example: List virtual streams too::"
-msgstr ""
+msgstr "예: 가상 스트림을 포함한 목록을 출력한다::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:105
 # 73fd490fa6be449c83549caabca17119
@@ -94,7 +94,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:107
 # 15eb8617d1d944949717d81ebb9456f1
 msgid "Extract out the specified stream in the <hwp5file> to the standard output."
-msgstr ""
+msgstr "<hwp5file>의 지정된 스트림을 표준출력으로 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:109
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:135
@@ -121,7 +121,7 @@ msgstr ""
 # 8329c429e5674eee8022ec39cceed432
 # cbf2341d2c7c4149bdc3f07da885e0ae
 msgid "Example::"
-msgstr ""
+msgstr "예::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:132
 # 8113891b61bb4b339c77d078336391f4
@@ -131,7 +131,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:133
 # 5c354689e91c40c69ad6d750bd240d1c
 msgid "Extract out streams in the specified <hwp5file> to a directory."
-msgstr ""
+msgstr "<hwpfile>의 스트림들을 디렉토리로 풀어낸다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:147
 # 7e74224ead034d0b9062fc23bf97f150
@@ -141,7 +141,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:148
 # f521cdaf60f4451b88faab8a6235b5a4
 msgid "Print records in the specified <record-stream>."
-msgstr ""
+msgstr "지정된 <record-stream>의 레코드들을 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:170
 # fa6bced7db4546ada729c887d0090fa9
@@ -151,7 +151,7 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:171
 # 058aa45f4ec8463080526f955a7ff2fd
 msgid "Print parsed binary models in the specified <record-stream>."
-msgstr ""
+msgstr "지정된 <record-stream>을 파싱한 바이너리 모델들을 출력한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:189
 # c8abf693fd074f0782b2c51c7f5241cc
@@ -161,17 +161,17 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:190
 # 8cdcfec208464d1a9dbafb8d0489fe4b
 msgid "Find models with specified predicates."
-msgstr ""
+msgstr "지정된 조건을 만족하는 모델들을 찾는다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:192
 # 78f39cd8bb2c46a89417b59931917868
 msgid "Example: Find paragraphs::"
-msgstr ""
+msgstr "예: 문단 검색::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:198
 # 9e23e53b35ca4aefb5e8c1ffa99d3d26
 msgid "Example: Find and dump records of HWPTAG_LIST_HEADER which is parsed incompletely::"
-msgstr ""
+msgstr "예: 온전히 파싱되지 않은 ``HWPTAG_LIST_HEADER`` 레코드들을 찾아 출력한다::"
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:205
 # c817e72500a6480a8e3a4593bd813591
@@ -181,10 +181,10 @@ msgstr ""
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:206
 # 36611ef624fe4bec815a5f8e03567251
 msgid "Transform <hwp5file> into an XML."
-msgstr ""
+msgstr "<hwp5file>을 XML로 변환한다."
 
 #: ../../../pyhwp/hwp5/proc.py:docstring of hwp5.proc:213
 # d89687875f5d4135963346b8e2de3a53
 msgid "With ``--embedbin`` option, you can embed base64-encoded ``BinData/`` files in the output XML."
-msgstr ""
+msgstr "``--embedbin`` 옵션을 주면, ``BinData/`` 의 파일들을 출력 XML에 내장할 수 있다."
 
