README: 한국어 -> 한국/조선어

--- a/docs/translated/en/LC_MESSAGES/intro.po
+++ b/docs/translated/en/LC_MESSAGES/intro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-11 08:07\n"
+"POT-Creation-Date: 2012-09-11 08:41\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,8 +98,8 @@ msgstr ""
 #: ../../intro.rst:38
 msgid ""
 "Documentation: `http://packages.python.org/pyhwp <http://packages.python.org/"
-"pyhwp>`_ [`한국어 <http://packages.python.org/pyhwp/ko>`_] [`develop branch "
-"<http://pyhwp.readthedocs.org>`_]"
+"pyhwp>`_ [`한국/조선어 <http://packages.python.org/pyhwp/ko>`_] [`develop "
+"branch <http://pyhwp.readthedocs.org>`_]"
 msgstr ""
 
 # 85285a15a8574742b5e7e57d5ce9c7bb
