--- a/docs/translated/ko/LC_MESSAGES/intro.po
+++ b/docs/translated/ko/LC_MESSAGES/intro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-11 08:07\n"
+"POT-Creation-Date: 2012-09-11 08:41\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,8 +98,8 @@ msgstr "문서화 및 개발"
 #: ../../intro.rst:38
 msgid ""
 "Documentation: `http://packages.python.org/pyhwp <http://packages.python.org/"
-"pyhwp>`_ [`한국어 <http://packages.python.org/pyhwp/ko>`_] [`develop branch "
-"<http://pyhwp.readthedocs.org>`_]"
+"pyhwp>`_ [`한국/조선어 <http://packages.python.org/pyhwp/ko>`_] [`develop "
+"branch <http://pyhwp.readthedocs.org>`_]"
 msgstr ""
 "문서화: `http://packages.python.org/pyhwp/ko <http://packages.python.org/"
 "pyhwp/ko>`_ [`English <http://packages.python.org/pyhwp>`_] [`개발 branch "
