README: replace brand names with generic terms

--- a/README
+++ b/README
@@ -36,8 +36,8 @@ Documentation & Development
 ---------------------------
 
 - Documentation: `http://packages.python.org/pyhwp <http://packages.python.org/pyhwp>`_ [`한국/조선어 <http://packages.python.org/pyhwp/ko>`_] [`develop branch <http://pyhwp.readthedocs.org>`_]
-- PyPI: `http://pypi.python.org/pypi/pyhwp <http://pypi.python.org/pypi/pyhwp>`_
-- GitHub: `https://github.com/mete0r/pyhwp <https://github.com/mete0r/pyhwp>`_
+- Distribution: `http://pypi.python.org/pypi/pyhwp <http://pypi.python.org/pypi/pyhwp>`_
+- Development: `https://github.com/mete0r/pyhwp <https://github.com/mete0r/pyhwp>`_
 - Issue tracker: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_
 - Feedbacks & contributions are welcome!
 
