--- a/README
+++ b/README
@@ -49,13 +49,12 @@ Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_
 License
 -------
 
+Copyright (C) 2010-2012 mete0r <mete0r@sarangbang.or.kr>
+
 .. image:: http://www.gnu.org/graphics/agplv3-155x51.png
 
 `GNU Affero General Public License v3.0 <http://www.gnu.org/licenses/agpl-3.0.html>`_
 `(text version) <http://www.gnu.org/licenses/agpl-3.0.txt>`_
-
-pyhwp: HWP Document Format v5 parser & processor
-Copyright (C) 2010-2012 mete0r <mete0r@sarangbang.or.kr>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -73,5 +72,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 Disclosure
 ----------
 
-pyhwp는 `(주)한글과컴퓨터 <http://www.hancom.co.kr>`_ 의 한/글 문서 파일(.hwp) 공개 문서를
-참고하여 개발하였습니다.
+This program has been developed in accordance with a public document named "HWP
+Binary Specification 1.1" published by `Hancom Inc. <http://www.hancom.co.kr>`_
