--- a/README
+++ b/README
@@ -26,11 +26,8 @@ from `github <https://github.com/mete0r/pyhwp>`_::
 Requirements
 ------------
 
-- Python 2.5, 2.6 or 2.7
-- `simplejson <http://pypi.python.org/pypi/simplejson>`_
-- `OleFileIO_PL <http://pypi.python.org/pypi/OleFileIO_PL>`_ >= 0.20
-- `docopt <http://pypi.python.org/pypi/docopt>`_ >= 0.3
-- `hypua2jamo <http://pypi.python.org/pypi/hypua2jamo>`_ >= 0.1
+- CPython 2.5, 2.6 or 2.7 or Jython 2.5.3
+- `setuptools <http://pypi.python.org/pypi/setuptools>`_
 
 Documentation & Development
 ---------------------------
