docs: update translations

--- a/docs/translated/ko/LC_MESSAGES/intro.po
+++ b/docs/translated/ko/LC_MESSAGES/intro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-30 16:19\n"
+"POT-Creation-Date: 2013-06-09 02:31\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -65,16 +65,19 @@ msgstr "`github <https://github.com/mete0r/pyhwp>`_ 에서::"
 msgid "Requirements"
 msgstr "필요한 것들"
 
-# 20db36e8a82d4f669f57dfcd0caf4eaf
+# db6d63914fb2413d92e5701b694e2b22
 #: ../../intro.rst:29
-msgid "CPython 2.5, 2.6 or 2.7 or Jython 2.5.3"
-msgstr ""
+msgid "CPython 2.5, 2.6, 2.7, Jython 2.5.3 or PyPy 2.0.2"
+msgstr "CPython 2.5, 2.6, 2.7, Jython 2.5.3 혹은 PyPy 2.0.2"
 
 # 0d7548139cea4b37bb2298584800bffc
 #: ../../intro.rst:30
-#, fuzzy
-msgid "`setuptools <http://pypi.python.org/pypi/setuptools>`_"
-msgstr "`pypi <http://pypi.python.org/pypi/pyhwp>`_ 에서::"
+msgid ""
+"`setuptools <http://pypi.python.org/pypi/setuptools>`_ or `distribute "
+"<https://pypi.python.org/pypi/distribute>`_"
+msgstr ""
+"`setuptools <http://pypi.python.org/pypi/setuptools>`_ 혹은 `distribute "
+"<https://pypi.python.org/pypi/distribute>`_"
 
 # 070821d20ddc4c6cb15fa70632bf6523
 #: ../../intro.rst:33
