README: update maintainer contact address

--- a/README
+++ b/README
@@ -41,7 +41,7 @@ Documentation & Development
 Contributors
 ------------
 
-Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_
+Maintainer: `mete0r <https://github.com/mete0r>`_
 
 License
 -------
