--- a/docs/translated/ko/LC_MESSAGES/intro.po
+++ b/docs/translated/ko/LC_MESSAGES/intro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-09 02:31\n"
+"POT-Creation-Date: 2013-06-10 12:20\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -87,12 +87,12 @@ msgstr "문서화 및 개발"
 # 8228a1248e8b4f6fb82be453d4ef4135
 #: ../../intro.rst:35
 msgid ""
-"Documentation: `http://packages.python.org/pyhwp <http://packages.python.org/"
-"pyhwp>`_ [`한국/조선어 <http://packages.python.org/pyhwp/ko>`_] [`develop "
+"Documentation: `http://pythonhosted.org/pyhwp/ <http://pythonhosted.org/"
+"pyhwp/>`_ [`한국/조선어 <http://pythonhosted.org/pyhwp/ko/>`_] [`develop "
 "branch <http://pyhwp.readthedocs.org>`_]"
 msgstr ""
-"문서화: `http://packages.python.org/pyhwp/ko <http://packages.python.org/"
-"pyhwp/ko>`_ [`English <http://packages.python.org/pyhwp>`_] [`개발 branch "
+"문서화: `http://pythonhosted.org/pyhwp/ko <http://pythonhosted.org/"
+"pyhwp/ko>`_ [`English <http://pythonhosted.org/pyhwp>`_] [`개발 branch "
 "<http://pyhwp.readthedocs.org>`_]"
 
 # 0d7548139cea4b37bb2298584800bffc
@@ -133,8 +133,8 @@ msgstr "기여한 이들"
 
 # 38b9e22103b4432eaf4fdf9f452bc3e3
 #: ../../intro.rst:44
-msgid "Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_"
-msgstr "Maintainer: `@mete0r_kr <https://twitter.com/#!/mete0r_kr>`_"
+msgid "Maintainer: `mete0r <https://github.com/mete0r>`_"
+msgstr "Maintainer: `mete0r <https://github.com/mete0r>`_"
 
 # 3968cb8206a14f398a248eed814ad9aa
 #: ../../intro.rst:47
