--- a/README
+++ b/README
@@ -32,7 +32,7 @@ Requirements
 Documentation & Development
 ---------------------------
 
-- Documentation: `http://packages.python.org/pyhwp <http://packages.python.org/pyhwp>`_ [`한국/조선어 <http://packages.python.org/pyhwp/ko>`_] [`develop branch <http://pyhwp.readthedocs.org>`_]
+- Documentation: `http://pythonhosted.org/pyhwp/ <http://pythonhosted.org/pyhwp/>`_ [`한국/조선어 <http://pythonhosted.org/pyhwp/ko/>`_] [`develop branch <http://pyhwp.readthedocs.org>`_]
 - Distribution: `http://pypi.python.org/pypi/pyhwp <http://pypi.python.org/pypi/pyhwp>`_
 - Development: `https://github.com/mete0r/pyhwp <https://github.com/mete0r/pyhwp>`_
 - Issue tracker: `https://github.com/mete0r/pyhwp/issues <https://github.com/mete0r/pyhwp/issues>`_
