--- a/docs/translated/ko/LC_MESSAGES/converters.po
+++ b/docs/translated/ko/LC_MESSAGES/converters.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-07-03 07:37\n"
+"POT-Creation-Date: 2013-10-29 04:47\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ko\n"
 
 # eafb3e22bc3740cb9f41f4f2df9e7800
 #: ../../converters.rst:2
@@ -25,12 +25,12 @@ msgstr "변환기들 (*실험적*)"
 # 6b4bc6aa159144d4bb3a51e48e5909da
 #: ../../converters.rst:4
 msgid "Convert HWPv5 documents into other document formats."
-msgstr "HWPv5 문서들을 다른 문서 형식으로 변환한다."
+msgstr "HWPv5 문서를 다른 문서 형식으로 변환한다."
 
 # 5d38e3678e074ca2b766734ae5247217
 #: ../../converters.rst:7
 msgid "Requirements"
-msgstr "필요한 것들"
+msgstr "필요한 것"
 
 # 67f8cb2c410f45559ea36edddc5f3bd6
 #: ../../converters.rst:8
@@ -49,7 +49,7 @@ msgid ""
 "org/>`_'s `xsltproc <http://xmlsoft.org/XSLT/xsltproc2.html>`_ / `xmllint "
 "<http://infohost.nmt.edu/tcc/help/xml/lint.html>`_ programs."
 msgstr ""
-"이를 수행하기 위해서는 `lxml <http://pypi.python.org/pypi/lxml>`_ (`homepage "
+"이를 수행하려면 `lxml <http://pypi.python.org/pypi/lxml>`_ (`homepage "
 "<http://lxml.de>`_)이나 `libxml2 <http://www.xmlsoft.org/>`_ 의 `xsltproc "
 "<http://xmlsoft.org/XSLT/xsltproc2.html>`_ / `xmllint <http://infohost.nmt."
 "edu/tcc/help/xml/lint.html>`_ 프로그램이 필요하다."
@@ -72,7 +72,7 @@ msgid ""
 "lxml versions below that may work too, but those are not tested.)"
 msgstr ""
 "(현재 lxml 2.3.5 을 이용한 변환은 테스트되었고 잘 작동하는 것으로 확인되었"
-"다. 그보다 낮은 버젼의 lxml으로도 될 수 있으나, 테스트되지는 않았다.)"
+"다. 그보다 낮은 버전의 lxml으로도 될 수 있으나, 테스트되지는 않았다.)"
 
 # 173347f476564817bd87068b394dbd6a
 #: ../../converters.rst:27
