--- a/docs/translated/ko/LC_MESSAGES/index.po
+++ b/docs/translated/ko/LC_MESSAGES/index.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pyhwp 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-18 00:14\n"
+"POT-Creation-Date: 2013-10-29 04:47\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: mete0r <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: ko\n"
 
 # e67bfb841934418fb9aa8d6803ae6f61
 #: ../../index.rst:7
@@ -25,7 +25,7 @@ msgstr ""
 # fce4f4f87ace4bd79507f35f9f31fc09
 #: ../../index.rst:9
 msgid "Contents:"
-msgstr "목차"
+msgstr "목차:"
 
 # c7b2c8ef52e84e3294e7003ff9087ee0
 #: ../../index.rst:23
