README: fix pip install to use --pre option

--- a/README
+++ b/README
@@ -15,11 +15,11 @@ Installation
 from `pypi <http://pypi.python.org/pypi/pyhwp>`_::
 
    virtualenv pyhwp
-   pyhwp/bin/pip install pyhwp  # Install pyhwp into a virtualenv directory
+   pyhwp/bin/pip install --pre pyhwp  # Install pyhwp into a virtualenv directory
 
 Or::
 
-   pip install --user pyhwp  # Install pyhwp into user's home directory
+   pip install --user --pre pyhwp  # Install pyhwp into user's home directory
 
 Requirements
 ------------
