--- a/README
+++ b/README
@@ -26,6 +26,7 @@ Requirements
 
 - CPython 2.5, 2.6, 2.7, Jython 2.5.3 or PyPy 2.0.2
 - `setuptools <http://pypi.python.org/pypi/setuptools>`_
+- `pycrypto <https://pypi.python.org/pypi/pycrypto>`_ (optional, to decode distribution docs)
 
 Documentation & Development
 ---------------------------
