CHANGES: update for 0.1b7

--- a/CHANGES
+++ b/CHANGES
@@ -4,8 +4,7 @@ CHANGES
 0.1b7 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+- support distribution docs.
 
 0.1b6 (2014-01-20)
 ------------------
